@@ -306,6 +306,7 @@ fix playlist issue
 fix missing bitrates
 fix special charecters issue in device name
 fix database reset when login was denied
+force login after device id reset
 
 
 6.0.13 (beta)
